[package]
name = "nano_mesh_cli_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-nano-mesh = "0.1.8"
platform-serial-linux = "1.0.1"
platform-millis-linux = "1.0.0"
clap = { version = "4.4", features = ["derive"] }
