[package]
name = "embedded-nano-mesh-cli-tool"
version = "2.0.0"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
edition = "2021"
description = "Command line utility to interact with embedded-nano-mesh network trough shell"
license = "MIT"
readme = "README.md"
repository = "https://github.com/boshtannik/embedded-nano-mesh-cli-tool/"
keywords = ["mesh", "protocol", "network", "embedded", "cli"]
categories = [
  "network-programming",
  "command-line-utilities",
  "development-tools",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-nano-mesh = "2.0.0"
clap = { version = "4.4", features = ["derive"] }
serialport = "4.0.0"
embedded-serial = "0.5.0"
